--- a/Alumni/client/src/pages/registrationPage/registration.css
+++ b/Alumni/client/src/pages/registrationPage/registration.css
@@ -36,3 +36,19 @@
     width: 20%;
     text-align: center;
 }
+
+@media only screen and (max-width: 1200px){
+	.button{
+        display: flex;
+        flex-direction: column;
+    }
+    .btn{
+        width: 100%;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .nav-link{
+        width: 100%;
+        text-align: center;
+    }
+}
